# prime-train

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic-config.toml  gotcha-fsdp-lora.toml  gotcha-prime-executor.toml
src/prime_train/: __init__.py  cli.py
src/prime_train/config/: __init__.py  generator.py  manager.py
src/prime_train/cost/: __init__.py  memory.py  optimizer.py  presets.py
src/prime_train/profiler/: __init__.py  detector.py
src/prime_train/resilience/: __init__.py  backup.py  checkpoint_budget.py  disk.py  health.py  runner.py
src/prime_train/validator/: __init__.py  core.py  gotchas.py  memory.py  model.py  prerequisites.py  schema.py  types.py
tests/: __init__.py  test_cli.py  test_disk.py  test_validator.py
