[project]
name = "prime-train"
version = "0.1.0"
description = "Production-grade training harness for prime-rl with validation, cost optimization, and resilience"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alexander Huth", email = "36005888+seconds-0@users.noreply.github.com" }
]
keywords = ["rl", "reinforcement-learning", "prime-intellect", "training", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.20.0",
    "httpx>=0.25.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
# Cloud storage backends
s3 = ["boto3>=1.34.0"]
b2 = ["b2sdk>=2.0.0"]
gcs = ["google-cloud-storage>=2.14.0"]
all-storage = ["boto3>=1.34.0", "b2sdk>=2.0.0", "google-cloud-storage>=2.14.0"]

# SkyPilot integration for multi-cloud
skypilot = ["skypilot[all]>=0.6.0"]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
prime-train = "prime_train.cli:app"

[project.urls]
Homepage = "https://github.com/seconds-0/prime-train"
Documentation = "https://github.com/seconds-0/prime-train#readme"
Repository = "https://github.com/seconds-0/prime-train"
Issues = "https://github.com/seconds-0/prime-train/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prime_train"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from err
]

[tool.ruff.lint.isort]
known-first-party = ["prime_train"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "tomli.*",
    "tomli_w.*",
    "wandb.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=prime_train --cov-report=term-missing"

[tool.coverage.run]
source = ["src/prime_train"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
